fixed gaps

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     
 }
 .links {
+   
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -35,6 +36,8 @@ ul {
 }
 
 li {
+    padding: 0;
+    padding-left: 20px;
     list-style: none;
     text-decoration: none;
     display: inline-block
@@ -53,10 +56,16 @@ a {
     padding-bottom: 100px;
     color:#F9FAF8;
 }
+
 .main-text {
     
     font-size: 48px;
     font-weight: 900;
+    
+}
+
+.content {
+    padding-right: 50px;
 }
 .sign-up {
     background-color: #3882F6;
@@ -67,9 +76,11 @@ a {
 }
 .img {
     display: flex;
+    
 }
 img {
     max-width: 400px;
+    
 }
 /*middle-top*/
 .middle-top {
